# ogl

./: CMakeLists.txt  vertex.shader
glm/: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cc
